tomcat/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-starter
spec:
  type: ClusterIP
  selector:
    app: tomcat-starter
  ports:
    - name: http
      port: 8080
      targetPort: 8080
