tomcat/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tomcat-starter
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: starter.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: tomcat-starter
              servicePort: 8080
